Added lines for generating internship resume also.

--- a/MyTex.tex
+++ b/MyTex.tex
@@ -108,81 +108,106 @@
 
 {\fontfamily{phv}\selectfont\Large Objective}\\
 Seeking a full time opportunity as a software development engineer.\\
+%Seeking a full time opportunity as a graphics software engineer.\\
+%Seeking an internship opportunity.\\
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 \begin{ressection}{Education}
-  \begin{ressubsec}{Texas A\&M University}{College Station, Texas}{Master of Science in Computer Science (GPA: 3.64)}{Graduation Date: May 2013}
-    \ressubitem{Course Work: Computer Architecture, Algorithms \& Analysis, Parallel Computing, Geometric Modeling, Image Synthesis, Physics Based Simulation, Rendering \& Shading, and Image \& Video Processing.}
-  \end{ressubsec}
-%  \begin{ressubsec2}{Texas A\&M University}{College Station, Texas}{Master of Science in Computer Science (GPA: 3.64)}{Graduation Date: May 2013}
-%    \end{ressubsec2}
+%  \begin{ressubsec}{Texas A\&M University}{College Station, Texas}{Master of Science in Computer Science (GPA: 3.64)}{Graduation Date: May 2013}
+%    \ressubitem{Courses: Computer Architecture, Algorithms \& Analysis, Parallel Computing, Geometric Modeling, Image Synthesis, Physics Based Simulation, Rendering \& Shading, and Image \& Video Processing.}
+%  \end{ressubsec}
+  \begin{ressubsec2}{Texas A\&M University}{College Station, Texas}{Master of Science in Computer Science (GPA: 3.64)}{Graduation Date: May 2013}
+    \end{ressubsec2}
   \begin{ressubsec2}{National Institute of Technology}{Durgapur, West Bengal, India.}{Bachelor of Technology in Computer Science and Engineering (GPA: 8.82/10)}{Graduation Date: May 2008}
   \end{ressubsec2}
 \end{ressection}
 
-%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{ressection}{Skills}
 
-  \resitem{\textbf{Programming languages:} C/C++, Python, OpenGL, GLSL, RSL, Java, PL/SQL}
-  \resitem{\textbf{Frameworks:} Qt, Cinder, Pthreads, MPI, CUDA}
-  \resitem{\textbf{Web languages and frameworks:} HTML, CSS, J2EE Servlets, JavaScript}
-  \resitem{\textbf{Server platforms:} WebSphere Application Server V6.1, Apache}
-  \resitem{\textbf{Tools and Software:} Photoshop, HDR Shop, Matlab, \LaTeX{}}
+%\begin{ressection}{Work Experience}
+%
+%  \begin{ressubsec}{Visulization Department, Texas A\&M University}{College Station, TX}{Research Assistant}{September 2012 - Present}
+%  		\ressubitem{Working on an image processing application to handle foreground-background separation. The application has client-server architecture where the clients are typically mobile devices. Apart from designing the imaging application, other server related processes like configuring the server and developing the web application are also a part of my responsibilities.}
+%  \end{ressubsec}
+%
+%   \begin{ressubsec}{USC Institute of Creative Technologies}{Playa Vista, CA}{Visiting Research Assistant}{May 2012 - July 2012}
+%     	\ressubitem{Worked on the analysis and extraction of subsurface scattering parameters of an object using only four photographs that are taken under controlled lighting conditions.}
+%   \end{ressubsec}
+%
+%  \begin{ressubsec}{Open Access Labs, Texas A\&M University}{College Station, TX}{Student Worker}{September 2011-April 2012}
+%  		\ressubitem{Provide solutions to computer related issues faced by the students in the computer lab.}
+%  \end{ressubsec}
+%
+%  \begin{ressubsec}{Tata Consultancy Services Limited}{Mumbai, India}{Assistant Systems Engineer}{July 2008-June 2010}
+%  		\ressubitem{Roles: WebSphere Application ServerV6.1 administration, Production support for the web applications deployed on the WebSphere server.}
+%  		\ressubitem{Automated application deployment on the client server using Jython scripting which decreased the app deployment time and significantly reduced the monetary resources required for the task.}
+%  \end{ressubsec}
+%
+%\end{ressection}
+\begin{ressection}{Work Experience}
+
+  \begin{ressubsec}{Tata Consultancy Services Limited}{Mumbai, India}{Assistant Systems Engineer}{July 2008-June 2010}
+  		\ressubitem{Roles: WebSphere Application ServerV6.1 administration, Production support for the web applications deployed on the WebSphere server.}
+  		\ressubitem{Automated application deployment on the client server using Jython scripting which decreased the app deployment time and significantly reduced the monetary resources required for the task.}
+  \end{ressubsec}
+  
+    \begin{ressubsec}{Open Access Labs, Texas A\&M University}{College Station, TX}{Student Worker}{September 2011-April 2012}
+    		\ressubitem{Provide solutions to computer related issues faced by the students in the computer lab.}
+    \end{ressubsec}
+  
+     \begin{ressubsec}{USC Institute of Creative Technologies}{Playa Vista, CA}{Visiting Research Assistant}{May 2012 - July 2012}
+       	\ressubitem{Worked on the analysis and extraction of subsurface scattering parameters of an object using only four photographs that are taken under controlled lighting conditions.}
+     \end{ressubsec}
+  
+    \begin{ressubsec}{Visulization Department, Texas A\&M University}{College Station, TX}{Research Assistant}{September 2012 - Present}
+    		\ressubitem{Working on an image processing application to handle foreground-background separation. The application has client-server architecture where the clients are typically mobile devices. Apart from designing the imaging application, other server related processes like configuring the server and developing the web application are also a part of my responsibilities.}
+    \end{ressubsec}
 
 \end{ressection}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{ressection}{Skills}
+
+  \resitem{\textbf{Programming languages:} C/C++(proficient), Python(prior experience), OpenGL(proficient), GLSL(proficient), Java(prior experience), PL/SQL(prior experience)}
+  \resitem{\textbf{Frameworks and libraries:} Qt(proficient), Cinder(coursework), Pthreads(prior experience), MPI(coursework), CUDA(coursework)}
+  \resitem{\textbf{Web languages and frameworks:} HTML(prior experience), CSS(prior experience), J2EE Servlets(prior experience), JavaScript(beginner)}
+  \resitem{\textbf{Server platforms:} WebSphere Application Server V6.1(prior experience), Apache(prior experience)}
+    \resitem{\textbf{Database platforms:} MySQL(prior experience)}
+  \resitem{\textbf{Tools and softwares:} Photoshop(beginner), HDR Shop(intermediate), Matlab(beginner), Maple(coursework), \LaTeX{}(intermediate)}
+
+\end{ressection}
+
+%\newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%  
 \begin{ressection}{Academic Projects}
 
   \begin{reslist}{Texas A\&M University}
-      \ressubitem{Developed a Ray Tracing renderer with GUI interface.}
-            \ressubitem{Created a physics based simulation of bird flight.}
-      \ressubitem{Implemented a parallel algorithm to do Cholesky decomposition using MPI and CUDA.}
-            \ressubitem{Studied and implemented swept volume generation for three dimensional surfaces.}
-%      \ressubitem{Studied the concept of extent of generalization of APIs.}
+      \ressubitem{Course Project: Created an animation video for Rendering and shading class. Please find the video at the URL: http://vimeo.com/41204737}
+      \ressubitem{Course project: Developed a ray tracing renderer application with GUI interface using Qt and C++.}
+      \ressubitem{Course project: Created a physics based simulation of bird flight using Cinder and C++.}
+      \ressubitem{Course project: Implemented a parallel algorithm to do Cholesky decomposition using MPI and CUDA.}
+      \ressubitem{Course project: Studied and implemented swept volume generation for three dimensional surfaces using Maple.}
   \end{reslist}
 
   \begin{reslist}{National Institute of Technology}
-      \ressubitem{Designed a Java GUI application which assists in drawing Data Flow Diagrams.}
-      \ressubitem{Developed an algorithm for bot-exploration on closed surfaces achieving a coverage of 59\%.}
+      \ressubitem{Independent project: Designed a Java GUI application which assists in drawing Data Flow Diagrams.}
+      \ressubitem{Independent project: Developed an algorithm for bot-exploration on closed surfaces using C++.}
   \end{reslist}
   
 \end{ressection}  
 
-%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{ressection}{Work Experience}
-
-  \begin{ressubsec2}{Visulization Department, Texas A\&M University}{College Station, TX}{Research Assistant}{September 2012 - Present}
-  \end{ressubsec2}
-
-   \begin{ressubsec2}{USC Institute of Creative Technologies}{Playa Vista, CA}{Visiting Research Assistant}{May 2012 - July 2012}
-   \end{ressubsec2}
-
-  \begin{ressubsec2}{Open Access Labs, Texas A\&M University}{College Station, TX}{Student Worker}{September 2011-April 2012}
-  \end{ressubsec2}
-
-  \begin{ressubsec2}{Tata Consultancy Services Limited}{Mumbai, India}{Assistant Systems Engineer}{July 2008-June 2010}
-  \end{ressubsec2}
-
-\end{ressection}
-
-
-\newpage
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%
-\begin{ressection}{Publications}
-	\resitem{Pradeep Garigipati, Ergun Akleman: Duotone Surfaces. International Symposium on Computational Aesthetics in Graphics, Visualization, and Imaging, 2012. Annecy, France. 99-106.}
-	\resitem{Yufeng Zhu, Pradeep Garigipati, Pieter Peers, Paul Debevec and Abhijeet Ghosh. Estimating Diffusion Parameters from Polarized Spherical GradientIllumination. IEEE Computer Graphics and Applications, 2013(To Appear).}
-\end{ressection}
+%\begin{ressection}{Publications}
+%	\resitem{Pradeep Garigipati, Ergun Akleman: Duotone Surfaces. International Symposium on Computational Aesthetics in Graphics, Visualization, and Imaging, 2012. Annecy, France. 99-106.}
+%	\resitem{Yufeng Zhu, Pradeep Garigipati, Pieter Peers, Paul Debevec and Abhijeet Ghosh. Estimating Diffusion Parameters from Polarized Spherical GradientIllumination. IEEE Computer Graphics and Applications, 2013(To Appear).}
+%\end{ressection}
 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%
-\begin{ressection}{Achievements and Activities}
-  
-%  \resitem{Contributed to the research work: 'Estimating Diffusion Parameters From Polarized Spherical Gradient Illumination', which was presented at SIGGRAPH 2012 Talks/Posters.}
+\begin{ressection}{Achievements}
   \resitem{Completed IBM Certification as System Administrator, WebSphere Application Server Network Deployment V6.1.}
   \resitem{Completed Green Belt Certification in Six Sigma.}
   
