Correct typo and remove pdf file

--- a/MyTex.tex
+++ b/MyTex.tex
@@ -134,7 +134,7 @@
   
   \begin{ressubsec3}{Sr. Software Engineer}{ArrayFire}{Jun 2013 - Nov 2015}
   	\begin{blockquote}
-  		Development and maintaince of ArrayFire library. Worked on Porting \& optimisation projects using CUDA/OpenCL/ArrayFire such as the following:
+  		Development and maintenance of ArrayFire library. Worked on Porting \& optimisation projects using CUDA/OpenCL/ArrayFire such as the following:
   		\begin{itemize}
   			\item[$\diamond$] OpenGL rendering tool with MEX interface.
   			\item[$\diamond$] Real-time video processing engine with Qt-GUI and OpenCL compute backend.
