--- a/MyTex.tex
+++ b/MyTex.tex
@@ -1,14 +1,24 @@
-
 % Pradeep Garigipati's Resume
 % Created: 14 Nov 2011
-% Last Modified: 14 Nov 2011
+% Last Modified: 02 Feb 2021
 
-\documentclass[11pt,oneside]{article}
-\usepackage{geometry}
-\usepackage{hyperref}
+\documentclass[oneside]{article}
+\usepackage{enumitem}
+\usepackage{fontawesome}
 \usepackage[T1]{fontenc}
+\usepackage{geometry}
+\usepackage{graphicx}
+\usepackage{hyperref}
+\usepackage{paracol}
+\usepackage{svg}
+\usepackage[most]{tcolorbox}
+\usepackage{xcolor}
+\usepackage{tikz}
+\usetikzlibrary{shapes.geometric,calc}
+\usepackage{ragged2e}
+
 \pagestyle{empty}
-\geometry{letterpaper,tmargin=0.55in,bmargin=0.55in,lmargin=0.65in,rmargin=0.65in,headheight=0in,headsep=0in,footskip=.3in}
+\geometry{letterpaper,tmargin=0.55in,bmargin=0.5in,lmargin=0.5in,rmargin=0.5in,headheight=0in,headsep=0in,footskip=.3in}
 \setlength{\parindent}{0in}
 \setlength{\parskip}{0in}
 \setlength{\itemsep}{0in}
@@ -20,169 +30,227 @@
   urlcolor=blue           % color of external links
 }
 
-% Name and contact information
-\newcommand{\name}{Pradeep Garigipati}
-\newcommand{\web}{\href{https://www.linkedin.com/in/pradeepgarigipati}{LinkedIn} , \href{https://github.com/9prady9}{GitHub}}
+\setlist{leftmargin=5mm}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % New commands and environments
 
+% Custom Colors
+\definecolor{afblue}{HTML}{073763}
+\definecolor{aforange}{HTML}{e69138}
+\definecolor{ivory}{HTML}{e7e7da}
+
+% Raised Rule Command:
+%  Arg 1 (Optional) - How high to raise the rule
+%  Arg 2            - Thickness of the rule
+%\newcommand{\raisedrule}[2][0em]{\leaders\hbox{\rule[#1]{1pt}{#2}}\hfill}
+
+\svgpath {
+	{images/svgs}
+}
+
 % This defines how the name looks
-\newcommand{\bigname}[1]{
-  \begin{center}\fontfamily{phv}\selectfont\Huge\scshape#1\end{center}
+\newcommand{\HeadingOne}[1]{\Huge\scshape#1}
+\newcommand{\LargeTwo}[1]{\large\scshape#1}
+
+% SideBarHeadings
+\newcommand{\colHeading}[1]{
+	\begin{tcolorbox}[frame code={},
+		center title,
+		left=0pt,
+		right=0pt,
+		top=0pt,
+		bottom=-1pt,
+		colback=afblue,
+		colframe=white,
+		enlarge left by=-1mm,
+		boxsep=4pt,
+		arc=2pt]
+		\textcolor{white}{
+			\textbf{
+				\Large #1
+			}
+		}
+	\end{tcolorbox}
 }
 
-% A ressection is a main section (<H1>Section</H1>)
-\newenvironment{ressection}[1]{
-  \vspace{4pt}
-  {\fontfamily{phv}\selectfont\Large#1}
-  \begin{itemize}
-  \vspace{3pt}
-}{
-  \end{itemize}
+\newcommand{\colSubHeading}[1]{
+	\textcolor{aforange}{#1}
 }
 
-\newenvironment{ressectionlist}[1]{
-  \vspace{4pt}
-  {\fontfamily{phv}\selectfont\Large#1}
-  \vspace{4pt}
+\newcommand{\sbVAText}[3]{
+	%\includesvg{images/svgs/#1.svg} \hspace{1mm} \raisebox{#2}{#3}
+    \includesvg[width=16pt]{images/svgs/#1.svg} \hspace{1mm} \raisebox{#2}{#3}
+	\vspace{1mm}
+	\\
 }
 
-% A resitem is a simple list element in a ressection (first level)
-\newcommand{\resitem}[1]{
-  \vspace{-4pt}
-  \item \begin{flushleft} #1 \end{flushleft}
+\newcommand{\skillSubHeading}[1]{
+	\textcolor{aforange}{\LargeTwo{#1}}
+	\newline
+	\vspace{-10pt}
 }
 
-% A ressubitem is a simple list element in anything but a ressection (second level)
-\newcommand{\ressubitem}[1]{
-  \vspace{-1pt}
-  \item [$\square$] \begin{flushleft} #1 \end{flushleft}
+\newcommand{\skill}[2]{
+	\pgfmathsetmacro\pgfxa{#2+1}
+	\tikzstyle{scorestars}=[circle, draw, inner sep=0.32em,anchor=west]
+
+	#1 \hspace*{\fill} \begin{tikzpicture}
+		\foreach \i in {1,...,5} { % replace end value with #3 if ranking order has to be custom
+			\pgfmathparse{(\i<=#2?"aforange!70":"white")}
+			\edef\starcolor{\pgfmathresult}
+			\draw (\i*1.3em,0) node[name=star\i,scorestars,fill=\starcolor]  {};
+		}
+		\pgfmathparse{(#2>int(#2)?int(#2+1):0}
+		\let\partstar=\pgfmathresult
+		\ifnum\partstar>0
+		\pgfmathsetmacro\starpart{#2-(int(#2))}
+		\path [clip] (star\partstar.north west) rectangle 
+		($(star\partstar.south west)!\starpart!(star\partstar.south east)$);
+		\fill (\partstar*1.3em,0) node[scorestars,fill=aforange!70]  {};
+		\fi,
+	\end{tikzpicture}
+\newline
+\vspace{-10pt}
 }
 
-% A resbigitem is a complex list element for stuff like jobs and education:
-%  Arg 1: Name of company or university
-%  Arg 2: Location
-%  Arg 3: Title and/or date range
-\newcommand{\resbigitem}[3]{
-  \vspace{-5pt}
-  \item
-  \textbf{#1}, \textnormal #2 \hfill #3
+% Args: Company, Date Range, Title, Description of Job.
+\newcommand{\job}[4]{
+\begin{tcolorbox}[ frame code={}, center title,
+	left=0pt, right=0pt, top=0pt, bottom=-1pt,
+	colback=ivory, colframe=black,
+	enlarge left by=-1mm, boxsep=3pt, arc=2pt ]
+	\faMapMarker \hspace{4pt} \textbf{#1}
+	\vspace{1mm}
+	\\
+	\faCalendar \hspace{1pt} \normalsize{#2}
+	\vspace{1mm}
+	\\
+	\faGear \hspace{0.1mm} \normalsize{#3}
+	\justify{\small{#4}}
+\end{tcolorbox}	
 }
 
-% This is a list that comes with a resbigitem
-% but has normal text instead of sublist
-\newenvironment{ressubsec3}[3]{
-  \resbigitem{#1}{#2}{#3}
+\newcommand{\eduitem}[3]{
+	\begin{tcolorbox}[ frame code={}, center title,
+		left=0pt, right=0pt, top=0pt, bottom=-1pt,
+		colback=ivory, colframe=black,
+		enlarge left by=-1mm, boxsep=3pt, arc=2pt ]
+		\faMapMarker \hspace{2mm} #1
+		\\
+		\faCalendar \hspace{1mm} #3
+		\\
+		\faAngleRight \hspace{3mm} #2
+	\end{tcolorbox} 
 }
 
-% This is a simple sublist
-\newenvironment{reslist}[1]{
-  \resitem{\textbf{#1}}
-  \vspace{-5pt}
-  \begin{itemize}
-}{
-  \end{itemize}
+\newcommand{\publication}[1]{
+	\faAngleRight \hspace {1mm} #1
+	\\
+	\vspace{1mm}
 }
-
-\newenvironment{blockquote}{%
-  \par%
-  \medskip
-  \leftskip=2em\rightskip=2em%
-  \noindent\ignorespaces}{%
-  \par\medskip}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Now the actual document:
 
 \begin{document}
-\fontfamily{ppl} \selectfont
-% Name with horizontal rule
-\bigname{\name}
+
+\fontfamily{cmtt}
+
 \begin{center}
-  \web
+  \HeadingOne{Pradeep Garigipati}
 \end{center}
-\vspace{-8pt} \rule{\textwidth}{1pt}
 
+%\vspace{-8pt} \rule{\textwidth}{1pt}
 
-\begin{ressectionlist}{SKILLS}
+\columnratio{0.35}
+\begin{paracol}{2}
+  \colHeading{Contact Info}
+  \sbVAText{gmail}{1.5mm}{pradeep.garigipati@gmail.com}
+  \sbVAText{smartphone}{3.5mm}{+91 - 9505318097}
+  \sbVAText{github}{1.5mm}{\href{https://github.com/9prady9/}{9prady9}}
+  \sbVAText{linkedin}{1.5mm}{\href{https://www.linkedin.com/in/pradeepgarigipati/}{pradeepgarigipati}}
 
-  \begin{tabular*}{\textwidth}{@{\extracolsep{\fill} } l l l }
-    Requirements Analysis & Software Development & Coding \& Testing\\
-        Documentation & Debugging \& Troubleshooting & Performance Optimization \\
-  \end{tabular*}
-  \newline
-\end{ressectionlist}
+  \vspace{-16pt} % For some reason there is extra space after icons
+  \colHeading{Expertise}
+	\begin{itemize}
+		\item Requirements Analysis
+		\item Software Development
+		\item Unit and Integration Testing
+		\item Performance Optimization
+	\end{itemize}
 
+  \colHeading{Skills}
+  % Programming Skill
+  \skillSubHeading{Programming}
+  \skill{C/C++}{4}
+  \skill{Rust}{3}
+  \skill{Python}{3}
+  \skill{OpenGL}{4}
+  \skill{CUDA}{4}
+  \skill{OpenCL}{4}
+  \skill{GLSL}{4}
+  \skill{MPI}{2}
+  \skill{Qt}{2}
+  
+  % Software Skill
+  \skillSubHeading{Software}
+  \skill{GIMP}{2}
+  \skill{Matlab}{2}
 
-\begin{ressection}{TECHNOLOGY}
+  \skillSubHeading{Tools}
+  \skill{CMake}{5}
+  \skill{Docker}{3}
+  \skill{Git}{4}
+  \skill{\LaTeX}{2}
+  \skill{Kubernetes}{1}
+  
+  \skillSubHeading{Operating System}
+  \skill{Linux}{4}
+  \skill{Windows}{4}
+  \skill{MacOS}{2}
+  
+  \skillSubHeading{Languages}
+  \skill{English}{5}
+  \skill{Hindi}{4}
+  \skill{Telugu}{5}
+  
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-  \resitem{\textbf{Programming:} C/C++(proficient), OpenGL(proficient), GLSL(proficient), Rust(proficient), CUDA(proficient), OpenCL(proficient), MPI(beginner), Python(intermediate), Qt(proficient), Git(proficient), Android(beginner), Vulkan(beginner)}
+	%% DESCRIPTIVE COLOUMN
+  \switchcolumn
+  %\colHeading{About Me}
+  \colHeading{\faGears \hspace{1mm} Employment History}
+  \job{Self-Employed, India}{Dec 2015 - Present}{Freelance Software Consultant}{
+  	Core Services: Software Development, Performance Optimization, Porting
+  }
+  \job{ArrayFire, Atlanta, USA}{Jun 2013 - Nov 2015}{Software Engineer}{
+  	Development and maintenance of ArrayFire library. Worked on Porting \& performance optimization projects involving CUDA/OpenCL/ArrayFire/OpenGL technologies.
+  }
+  \job{Visualization Department, Texas A\&M University}{Sep 2012 - Apr 2013}{Graphics Programmer}{
+  	      Worked on an image processing application to handle foreground-background separation.
+  }
+\job{USC Institute of Creative Technologies}{May 2012 - Jul 2012}{Rendering Programmer}{
+	Worked on the analysis and extraction of subsurface-scattering parameters for an object.This work is published in IEEE Computer Graphics and Applications special issue.
+}
+  \job{Tata Consultancy Services Limited, Mumbai, India}{Jul 2008 - Jun 2010}{Assistant Systems Engineer}{
+  	Provided production support for the web applications deployed on WebSphere Application Server. Automated app deployment on servers, drastically reducing the costs associated.
+  }
 
-  \resitem{\textbf{Tools \& Frameworks:} docker(intermediate), GIMP(intermediate), Photoshop(beginner), Matlab(beginner), \LaTeX{}(intermediate), Maya(beginner)}
+  \colHeading{\faGraduationCap \hspace{1mm} Education}
+  \eduitem{Texas A\&M University, College Station}{M.S. in Computer Science}{May 2013}
+  \eduitem{NIT-Durgapur, India}{B. Tech. in Computer Science and Engineering}{May 2008}
 
-\end{ressection}
+  \colHeading{\faBook \hspace{1mm} Publications}
+  \begin{itemize}
+  \item {
+  	Pradeep Garigipati, Ergun Akleman: Duotone Surfaces. International Symposium on Computational Aesthetics in Graphics, Visualization, and Imaging, 2012. Annecy, France. 99-106.
+  }
+  \item{
+  	Yufeng Zhu, Pradeep Garigipati, Pieter Peers, Paul Debevec and Abhijeet Ghosh. Estimating Diffusion Parameters from Polarized Spherical Gradient Illumination. IEEE Computer Graphics and Applications, 2013.
+  }
+\end{itemize}
 
-
-\begin{ressection}{EXPERIENCE}
-  \begin{ressubsec3}{Freelance Software Developer}{Self-Employed}{Dec 2015 - Present}
-    \begin{blockquote}
-      Core Services: Software Development, Performance Optimization, Porting
-  \end{blockquote}
-  \end{ressubsec3}
-
-  \begin{ressubsec3}{Sr. Software Engineer}{ArrayFire}{Jun 2013 - Nov 2015}
-    \begin{blockquote}
-      Development and maintenance of ArrayFire library. Worked on Porting \& performance optimization projects involving CUDA/OpenCL/ArrayFire/OpenGL technologies.
-    \end{blockquote}
-  \end{ressubsec3}
-
-  \begin{ressubsec3}{Graphics Programmer}{Visualization Department, Texas A\&M University}{Sep 2012 - Apr 2013}
-
-    \begin{blockquote}
-      Worked on an image processing application to handle foreground-background separation.
-    \end{blockquote}
-
-  \end{ressubsec3}
-
-  \begin{ressubsec3}{Rendering Programmer}{USC Institute of Creative Technologies}{May 2012 - Jul 2012}
-
-    \begin{blockquote}
-      Worked on the analysis and extraction of subsurface-scattering parameters for an object.This work is published in IEEE Computer Graphics and Applications special issue.
-    \end{blockquote}
-
-  \end{ressubsec3}
-
-  \begin{ressubsec3}{Help Desk Assistant}{Open Access Labs, Texas A\&M University}{Sep 2011 - Apr 2012}
-  \end{ressubsec3}
-
-  \begin{ressubsec3}{Assistant Systems Engineer}{Tata Consultancy Services Limited}{Jul 2008 - Jun 2010}
-
-    \begin{blockquote}
-      Provided production support for the web applications deployed on WebSphere Application Server. Automated app deployment on servers, drastically reducing the costs associated.
-    \end{blockquote}
-
-  \end{ressubsec3}
-
-\end{ressection}
-
-
-\begin{ressection}{EDUCATION}
-
-  \begin{ressubsec3}{M.S. in Computer Science}{Texas A\&M University, College Station}{May 2013}
-  \end{ressubsec3}
-
-  \begin{ressubsec3}{B. Tech. in Computer Science and Engineering}{NIT-Durgapur, India}{May 2008}
-  \end{ressubsec3}
-
-\end{ressection}
-
-\begin{ressection}{PUBLICATIONS}
-
-  \resitem{Pradeep Garigipati, Ergun Akleman: Duotone Surfaces. International Symposium on Computational Aesthetics in Graphics, Visualization, and Imaging, 2012. Annecy, France. 99-106.}
-
-  \resitem{Yufeng Zhu, Pradeep Garigipati, Pieter Peers, Paul Debevec and Abhijeet Ghosh. Estimating Diffusion Parameters from Polarized Spherical Gradient Illumination. IEEE Computer Graphics and Applications, 2013.}
-
-\end{ressection}
+\end{paracol}
 
 \end{document}
